--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "three": "^0.151.2",
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.61.3",
     "@react-three/fiber": "^8.12.0",
+    "@types/three": "^0.150.0",
     "framer-motion": "^10.10.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
